--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,17 @@
         <variable
             name="colis"
             type="firebaseauthcom.example.orlanth23.roomsample.database.entity.ColisEntity" />
+
+        <variable
+            name="callback"
+            type="firebaseauthcom.example.orlanth23.roomsample.ui.activity.callback.MainActivityCallbackListener" />
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <FrameLayout
+        android:id="@+id/frame_master"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="firebaseauthcom.example.orlanth23.roomsample.activity.MainActivity">
+        tools:context=".ui.activity.MainActivity">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/colis_list"
@@ -21,5 +26,13 @@
             android:layout_height="match_parent"
             app:layoutManager="LinearLayoutManager" />
 
-    </android.support.constraint.ConstraintLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:onClick="@{()-> callback.onClick()}"
+            android:layout_gravity="bottom|end"
+            app:srcCompat="@drawable/ic_search_white_48dp" />
+
+    </FrameLayout>
 </layout>
