--- a/app/src/main/res/layout-w900dp-land/activity_main.xml
+++ b/app/src/main/res/layout-w900dp-land/activity_main.xml
@@ -12,17 +12,18 @@
         app:layout_constraintHorizontal_weight="4"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/separator"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+    </FrameLayout>
 
     <View
         android:id="@+id/separator"
         android:layout_width="2dp"
         android:layout_height="0dp"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/frame_master"
         app:layout_constraintRight_toLeftOf="@+id/frame_detail"
-        android:background="@color/colorPrimaryDark"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
         android:id="@+id/frame_detail"
@@ -32,14 +33,6 @@
         app:layout_constraintHorizontal_weight="5"
         app:layout_constraintLeft_toRightOf="@+id/separator"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:onClick="@{()-> callback.onClick()}"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/ic_search_white_48dp" />
 </android.support.constraint.ConstraintLayout>
