--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <data>
-
-        <variable
-            name="colis"
-            type="firebaseauthcom.example.orlanth23.roomsample.database.entity.ColisEntity" />
-
-        <variable
-            name="callback"
-            type="firebaseauthcom.example.orlanth23.roomsample.ui.activity.callback.MainActivityCallbackListener" />
-    </data>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/frame_master"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.activity.MainActivity">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/colis_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="LinearLayoutManager" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:onClick="@{()-> callback.onClick()}"
-            android:layout_gravity="bottom|end"
-            app:srcCompat="@drawable/ic_search_white_48dp" />
-
     </FrameLayout>
-</layout>
+</LinearLayout>
