--- a/app/src/main/res/layout/adapter_colis.xml
+++ b/app/src/main/res/layout/adapter_colis.xml
@@ -61,7 +61,6 @@
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:contentDescription="Colis image" />
-
         </LinearLayout>
 
         <TextView
@@ -69,11 +68,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="15dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
             android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintBaseline_toBaselineOf="@+id/parcel_description"
             app:layout_constraintLeft_toRightOf="@+id/linear_image"
+            app:layout_constraintTop_toTopOf="@+id/linear_image"
             tools:text="RC12345678912" />
 
         <TextView
@@ -81,20 +81,27 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="15dp"
             app:layout_constraintBaseline_toBaselineOf="@+id/step_id_colis"
-            app:layout_constraintBottom_toTopOf="@+id/step_last_date"
             app:layout_constraintLeft_toRightOf="@+id/step_id_colis"
             app:layout_constraintRight_toLeftOf="@+id/step_slug"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="Colis de maman" />
 
+        <ImageView
+            android:id="@+id/step_slug"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="end"
+            android:layout_marginEnd="5dp"
+            android:contentDescription="Status last step"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/parcel_description" />
 
         <TextView
             android:id="@+id/step_last_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="5dp"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/step_last_date"
             app:layout_constraintLeft_toRightOf="@+id/linear_image"
@@ -110,7 +117,6 @@
             android:layout_marginStart="12dp"
             android:textSize="12sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/step_last_date"
-            app:layout_constraintBottom_toTopOf="@+id/step_last_update"
             app:layout_constraintLeft_toRightOf="@+id/step_last_date"
             app:layout_constraintRight_toRightOf="parent"
             tools:text="STOCKHOLM" />
@@ -129,11 +135,10 @@
             app:layout_constraintTop_toBottomOf="@+id/step_last_description"
             tools:text="09 déc. 2016 à 09:05" />
 
-
         <TextView
             android:id="@+id/step_last_update_text"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="Mis à jour il y a "
             android:textSize="12sp"
@@ -144,7 +149,7 @@
         <TextView
             android:id="@+id/step_last_update"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:textSize="12sp"
             android:textStyle="italic"
@@ -153,15 +158,6 @@
             app:layout_constraintTop_toTopOf="@+id/step_last_update_text"
             tools:text="30 mins" />
 
-        <ImageView
-            android:id="@+id/step_slug"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="end"
-            android:layout_marginEnd="5dp"
-            android:contentDescription="Status last step"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/parcel_description" />
 
     </android.support.constraint.ConstraintLayout>
 
