Add basic splash screen

--- a/app/src/main/res/layout/adapter_colis.xml
+++ b/app/src/main/res/layout/adapter_colis.xml
@@ -42,6 +42,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/adapter_colis_background"
         android:baselineAligned="false"
+        android:minHeight="70dp"
         android:clickable="true"
         android:focusable="true"
         android:padding="10dp">
@@ -68,12 +69,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="15dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
             android:textSize="14sp"
             android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/linear_image"
-            app:layout_constraintTop_toTopOf="@+id/linear_image"
+            app:layout_constraintBottom_toTopOf="@id/step_last_description"
             tools:text="RC12345678912" />
 
         <TextView
@@ -106,7 +107,6 @@
             app:layout_constraintBottom_toTopOf="@+id/step_last_date"
             app:layout_constraintLeft_toRightOf="@+id/linear_image"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/step_id_colis"
             tools:text="Envoyé mais pas encore reçu" />
 
         <TextView
@@ -132,7 +132,6 @@
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/step_last_update"
             app:layout_constraintLeft_toRightOf="@+id/linear_image"
-            app:layout_constraintTop_toBottomOf="@+id/step_last_description"
             tools:text="09 déc. 2016 à 09:05" />
 
         <TextView
@@ -155,7 +154,6 @@
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/step_last_update_text"
             tools:text="30 mins" />
 
 
