--- a/app/src/main/res/layout/adapter_colis.xml
+++ b/app/src/main/res/layout/adapter_colis.xml
@@ -42,7 +42,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/adapter_colis_background"
         android:baselineAligned="false"
-        android:minHeight="70dp"
+        android:minHeight="60dp"
         android:clickable="true"
         android:focusable="true"
         android:padding="10dp">
@@ -103,6 +103,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            app:layout_goneMarginBottom="8dp"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/step_last_date"
             app:layout_constraintLeft_toRightOf="@+id/linear_image"
