--- a/app/src/main/res/layout/adapter_colis.xml
+++ b/app/src/main/res/layout/adapter_colis.xml
@@ -5,36 +5,77 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraint_delete_layout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAccent"
-        android:clickable="true"
-        android:focusable="true"
-        android:padding="10dp">
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SUPPRIMER"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/img_delete"
-            app:layout_constraintTop_toTopOf="parent" />
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraint_delivered_layout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorAccent2"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="10dp">
 
-        <ImageView
-            android:id="@+id/img_delete"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_marginEnd="20dp"
-            android:contentDescription="Delete Button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_delete_grey_900_24dp" />
-    </android.support.constraint.ConstraintLayout>
+            <ImageView
+                android:id="@+id/img_delivered"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="20dp"
+                android:contentDescription="Delivered Button"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_check_circle_grey_900_48dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DELIVRER"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/img_delivered"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraint_delete_layout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SUPPRIMER"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/img_delete"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/img_delete"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginEnd="20dp"
+                android:contentDescription="Delete Button"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_delete_grey_900_24dp" />
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraint_detail_colis_layout"
@@ -42,9 +83,9 @@
         android:layout_height="match_parent"
         android:background="@drawable/adapter_colis_background"
         android:baselineAligned="false"
-        android:minHeight="60dp"
         android:clickable="true"
         android:focusable="true"
+        android:minHeight="60dp"
         android:padding="10dp">
 
         <LinearLayout
@@ -72,9 +113,9 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
             android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/linear_image"
             app:layout_constraintBottom_toTopOf="@id/step_last_description"
+            app:layout_constraintLeft_toRightOf="@+id/linear_image"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="RC12345678912" />
 
         <TextView
@@ -103,11 +144,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            app:layout_goneMarginBottom="8dp"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/step_last_date"
             app:layout_constraintLeft_toRightOf="@+id/linear_image"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_goneMarginBottom="8dp"
             tools:text="Envoyé mais pas encore reçu" />
 
         <TextView
