Feat : Ajout des locks sur les colis.

--- a/app/src/main/res/layout/fragment_add_colis.xml
+++ b/app/src/main/res/layout/fragment_add_colis.xml
@@ -4,7 +4,6 @@
     android:id="@+id/layout_search"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="?attr/actionBarSize"
     android:fitsSystemWindows="true"
     tools:mContext="nc.opt.mobile.optmobile.fragment.AddColisFragment">
 
@@ -55,6 +54,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_suivi_colis_explicatif"
         tools:text="EZ036524985US" />
+
+    <ImageView
+        android:id="@+id/img_scan"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        app:layout_constraintBottom_toBottomOf="@+id/edit_id_parcel"
+        app:layout_constraintLeft_toRightOf="@+id/edit_id_parcel"
+        app:srcCompat="@drawable/ic_visibility_grey_900_48dp" />
 
     <EditText
         android:id="@+id/edit_description_parcel"
