--- a/app/src/main/res/layout/activity_add_colis.xml
+++ b/app/src/main/res/layout/activity_add_colis.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frame_add_colis"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:mContext="nc.opt.mobile.optmobile.activity.AddColisActivity">
 
-    <fragment
-        android:name="firebaseauthcom.example.orlanth23.roomsample.ui.fragment.AddColisFragment"
-        android:tag="@string/tag_fragment_search_colis"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_add_colis"/>
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
