Feat : Now show message when List colis is empty

--- a/app/src/main/res/layout/fragment_main_activity.xml
+++ b/app/src/main/res/layout/fragment_main_activity.xml
@@ -17,6 +17,20 @@
             app:layoutManager="LinearLayoutManager" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
+    <TextView
+        android:id="@+id/text_explicatif_suivi_colis"
+        style="@style/Base.TextAppearance.AppCompat.Body1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="40dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="Commencez à suivre vos colis.\n\nAppuyez sur le bouton + pour ajouter un nouveau colis au suivi.\n\nDès que la situation de vos colis évoluera une notification vous sera envoyée. (ce service nécessite une connexion internet)"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_add_colis"
         android:layout_width="wrap_content"
