--- a/app/src/main/res/layout/fragment_add_colis.xml
+++ b/app/src/main/res/layout/fragment_add_colis.xml
@@ -9,15 +9,15 @@
 
     <TextView
         android:id="@+id/text_suivi_colis_explicatif"
-        style="@style/Base.TextAppearance.AppCompat.Body1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="20dp"
-        android:textSize="15sp"
+        android:layout_marginTop="40dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:text="Veuillez saisir les 13 lettres/chiffres de votre colis\nOu scanner son code barre avec votre appareil photo"
         android:textAlignment="center"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
