Feat : Ajout de fade effect entre les transitions.

--- a/app/src/main/res/drawable/adapter_colis_background.xml
+++ b/app/src/main/res/drawable/adapter_colis_background.xml
@@ -5,6 +5,11 @@
             <solid android:color="#757575" />
         </shape>
     </item>
+    <item android:state_pressed="false" android:state_selected="true">
+        <shape>
+            <solid android:color="@color/colorAccent" />
+        </shape>
+    </item>
     <item android:state_enabled="true">
         <shape>
             <solid android:color="#ffffff" />
