--- a/app/src/main/res/layout/fragment_historique_colis.xml
+++ b/app/src/main/res/layout/fragment_historique_colis.xml
@@ -10,8 +10,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:visibility="gone"
+
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +41,8 @@
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
         android:background="@color/colorPrimaryDark"
-        android:elevation="3dp"
+        android:elevation="10dp"
+        android:fadingEdgeLength="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
