--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorAccent2">#2e7d32</color>
+    <color name="colorAccent2">#66bb6a</color>
     <color name="colorAccentDark">#880e4f</color>
 </resources>
