--- a/app/src/main/res/layout/fragment_main_activity.xml
+++ b/app/src/main/res/layout/fragment_main_activity.xml
@@ -33,8 +33,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.design.widget.CoordinatorLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/coordinator_main_activity"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
@@ -42,8 +43,8 @@
             android:id="@+id/fab_add_colis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
-            app:layout_behavior="firebaseauthcom.example.orlanth23.roomsample.ui.FloatingActionButtonBehavior"
             app:srcCompat="@drawable/ic_add_white_48dp" />
     </android.support.design.widget.CoordinatorLayout>
 </android.support.constraint.ConstraintLayout>
