--- a/app/src/main/res/layout/adapter_etape.xml
+++ b/app/src/main/res/layout/adapter_etape.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:id="@+id/left_frame"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,24 +17,12 @@
 
         <ImageView
             android:id="@+id/img_step_status"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_gravity="center"
-            android:layout_marginEnd="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginEnd="14dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp" />
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/img_step_line"
-            android:layout_width="5dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginTop="2dp"
-            app:cardBackgroundColor="@color/colorPrimary"
-            app:cardCornerRadius="2dp"
-            app:cardElevation="0dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -43,7 +31,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,7 +50,6 @@
                 android:layout_marginBottom="5dp"
                 android:gravity="start"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-                android:textSize="14sp"
                 android:textStyle="bold"
                 tools:text="Traitement douanier en cours" />
 
@@ -71,22 +57,21 @@
                 android:id="@+id/step_commentaire"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:layout_marginRight="5dp"
                 android:layout_marginBottom="5dp"
+                android:layout_marginEnd="5dp"
                 android:gravity="start"
-                android:textSize="12sp"
                 android:textStyle="italic"
                 tools:text="Retention reason : Biens a valeur elevee - Declaration douaniere requise" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="20dp">
 
                 <TextView
                     android:id="@+id/step_localisation"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_weight="1"
@@ -99,11 +84,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:layout_marginEnd="5dp"
-                    android:layout_marginRight="5dp"
                     android:textSize="12sp"
                     tools:text="21 oct. à 13:45" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
